--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/DMCFA/social-media-app",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.0"
   },
   "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.7"
   }
 }
