--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Full Stack Social Media Web App",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,6 @@
   },
   "devDependencies": {
     "eslint": "^7.29.0",
-    "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.7"
   }
 }
