--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,9 @@
   },
   "devDependencies": {
     "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "2.3.2"
   }
 }
