--- a/client/package.json
+++ b/client/package.json
@@ -43,9 +43,6 @@
     "@babel/eslint-parser": "^7.14.7",
     "@babel/eslint-plugin": "^7.14.5",
     "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "prettier": "2.3.2"
+    "eslint-plugin-react": "^7.24.0"
   }
 }
