--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.25.1",
         "prettier": "^2.3.2"
+    },
+    "dependencies": {
+        "concurrently": "^6.2.1"
     }
 }
